--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>What Sonia Do</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,18 +24,19 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Hi, my name is Sonia</h1>
+								<p>your new friend from Indonesia.<br />
+								I sketch, draw, write codes and, of course, haiku. I know, the range is ridiculously wide, but, why not.<br />
+								Follow me this way.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#projects">Projects</a></li>
+								<li><a href="#work">Gallery</a></li>
+								<li><a href="#about">Haiku Corner</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
+								<li><a href="#elements">Archive</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -43,14 +44,33 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-							</article>
-
+						<!-- Projects -->
+							<section id="projects" class="main special">
+								<header class="major">
+									<h2>My Projects</h2>
+									<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+									<p>Check out some of my work showcasing my coding skills.</p>
+								</header>
+								<ul class="features">
+									<!-- Project 1 -->
+									<li>
+										<span class="icon solid fa-python"></span>
+										<h3>Tutor Number Optiimization and Scheduling using ILP</h3>
+										<p>A brief description of what the project does or solves.</p>
+										<a href="https://github.com/soniaagst/ilp-tutor-number-optimization-and-scheduling" target="_blank" class="button small">View on GitHub</a>
+									</li>
+							
+									<!-- Project 2 -->
+									<li>
+										<span class="icon solid fa-python"></span>
+										<h3>Vigenere Cipher: Encryption and Cryptanalysis</h3>
+										<p>A brief description of what the project does or solves.</p>
+										<a href="https://github.com/soniaagst/vigenere-cipher-encryption-and-cryptanalysis" target="_blank" class="button small">View on GitHub</a>
+									</li>
+								</ul>
+								<p>By the way, check out my <a href="#work">awesome work</a>.</p>
+							</section>
+						
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
@@ -343,7 +363,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Sonia Augustin, 2025.</p>
 					</footer>
 
 			</div>
