--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								<ul class="features">
 									<!-- Project 1 -->
 									<li>
-										<span class="icon solid fa-python"></span>
+										<i class="fa-solid fa-code"></i>
 										<h3>Tutor Number Optiimization and Scheduling using ILP</h3>
 										<p>A brief description of what the project does or solves.</p>
 										<a href="https://github.com/soniaagst/ilp-tutor-number-optimization-and-scheduling" target="_blank" class="button small">View on GitHub</a>
@@ -62,13 +62,13 @@
 							
 									<!-- Project 2 -->
 									<li>
-										<span class="icon solid fa-python"></span>
+										<i class="icon solid fa-code"></i>
 										<h3>Vigenere Cipher: Encryption and Cryptanalysis</h3>
 										<p>A brief description of what the project does or solves.</p>
 										<a href="https://github.com/soniaagst/vigenere-cipher-encryption-and-cryptanalysis" target="_blank" class="button small">View on GitHub</a>
 									</li>
 								</ul>
-								<p>By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>By the way, check out my <a href="#work">awesome artwork</a>.</p>
 							</section>
 						
 						<!-- Work -->
@@ -175,7 +175,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
