--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon solid fa-crow"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -45,7 +45,7 @@
 					<div id="main">
 
 						<!-- Projects -->
-							<section id="projects" class="main special">
+							<article id="projects">
 								<header class="major">
 									<h2>My Projects</h2>
 									<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
@@ -54,7 +54,7 @@
 								<ul class="features">
 									<!-- Project 1 -->
 									<li>
-										<i class="fa-solid fa-code"></i>
+										<i class="icon solid fa-code"></i>
 										<h3>Tutor Number Optiimization and Scheduling using ILP</h3>
 										<p>A brief description of what the project does or solves.</p>
 										<a href="https://github.com/soniaagst/ilp-tutor-number-optimization-and-scheduling" target="_blank" class="button small">View on GitHub</a>
@@ -69,7 +69,7 @@
 									</li>
 								</ul>
 								<p>By the way, check out my <a href="#work">awesome artwork</a>.</p>
-							</section>
+							</article>
 						
 						<!-- Work -->
 							<article id="work">
