--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>What Sonia Do</title>
+		<title>Sonia — Programmer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,21 +20,22 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon solid fa-crow"></span>
+							<span class="icon fa-moon"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Hi, my name is Sonia</h1>
 								<p>your new friend from Indonesia.<br />
-								I sketch, draw, write codes and, of course, haiku. I know, the range is ridiculously wide, but, why not.<br />
+								I sketch, draw, write codes and, of course, haiku.<br />
+								I know, the range is ridiculously wide, anyway...<br />
 								Follow me this way.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#projects">Projects</a></li>
-								<li><a href="#work">Gallery</a></li>
-								<li><a href="#about">Haiku Corner</a></li>
+								<li><a href="#gallery">Gallery</a></li>
+								<li><a href="#haiku">Haiku Corner</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="#elements">Archive</a></li>
 							</ul>
@@ -45,43 +46,41 @@
 					<div id="main">
 
 						<!-- Projects -->
-							<article id="projects">
-								<header class="major">
-									<h2>My Projects</h2>
-									<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-									<p>Check out some of my work showcasing my coding skills.</p>
-								</header>
-								<ul class="features">
+							<article id="projects" class="main special">
+								<h2 class="major">My Projects</h2>
+								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<p>Check out some of my coursework projects showcasing my coding skills.</p>
+								<ul class="alt">
 									<!-- Project 1 -->
 									<li>
 										<i class="icon solid fa-code"></i>
-										<h3>Tutor Number Optiimization and Scheduling using ILP</h3>
+										<h3>Project Title 1</h3>
 										<p>A brief description of what the project does or solves.</p>
-										<a href="https://github.com/soniaagst/ilp-tutor-number-optimization-and-scheduling" target="_blank" class="button small">View on GitHub</a>
+										<a href="https://github.com/yourusername/repo1" target="_blank" class="button small">View on GitHub</a>
 									</li>
-							
+
 									<!-- Project 2 -->
 									<li>
 										<i class="icon solid fa-code"></i>
-										<h3>Vigenere Cipher: Encryption and Cryptanalysis</h3>
+										<h3>Project Title 2</h3>
 										<p>A brief description of what the project does or solves.</p>
-										<a href="https://github.com/soniaagst/vigenere-cipher-encryption-and-cryptanalysis" target="_blank" class="button small">View on GitHub</a>
+										<a href="https://github.com/yourusername/repo2" target="_blank" class="button small">View on GitHub</a>
 									</li>
 								</ul>
-								<p>By the way, check out my <a href="#work">awesome artwork</a>.</p>
+								<p>By the way, check out my <a href="#gallery">awesome artwork</a>.</p>
 							</article>
-						
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
+
+						<!-- Gallery -->
+							<article id="gallery">
+								<h2 class="major">Gallery</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 							</article>
 
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
+						<!-- Haiku -->
+							<article id="haiku">
+								<h2 class="major">Haiku Corner</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							</article>
@@ -110,10 +109,11 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/soniaagst/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									<li><a href="mailto:agst.sonia@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://www.instagram.com/sonia_agst/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/soniaagst" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://wa.me/6283845285336/" class="icon brands whatsapp"><span class="label">WhatsApp</span></a></li>
 								</ul>
 							</article>
 
