--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Hi, my name is Sonia</h1>
+								<h1>Hi, I'm <em>Sonia</em></h1>
 								<p>your new friend from Indonesia.<br />
-								I sketch, draw, write codes and, of course, haiku.<br />
-								I know, the range is ridiculously wide, anyway...<br />
-								Follow me this way.</p>
+								I sketch, write codes <b>AND</b>, of course, haiku.<br />
+								Follow me this way, let me show you my legacy.</p>
 							</div>
 						</div>
 						<nav>
@@ -37,7 +36,7 @@
 								<li><a href="#gallery">Gallery</a></li>
 								<li><a href="#haiku">Haiku Corner</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href="#elements">Archive</a></li>
+								<li><a href="#elements">Elements</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -45,28 +44,42 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Projects -->
-							<article id="projects" class="main special">
+						<!-- Projects  class="main special"-->
+							<article id="projects">
 								<h2 class="major">My Projects</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Check out some of my coursework projects showcasing my coding skills.</p>
-								<ul class="alt">
-									<!-- Project 1 -->
-									<li>
-										<i class="icon solid fa-code"></i>
-										<h3>Project Title 1</h3>
-										<p>A brief description of what the project does or solves.</p>
-										<a href="https://github.com/yourusername/repo1" target="_blank" class="button small">View on GitHub</a>
-									</li>
 
-									<!-- Project 2 -->
-									<li>
-										<i class="icon solid fa-code"></i>
-										<h3>Project Title 2</h3>
-										<p>A brief description of what the project does or solves.</p>
-										<a href="https://github.com/yourusername/repo2" target="_blank" class="button small">View on GitHub</a>
-									</li>
-								</ul>
+								<!-- Project 1 -->
+									<i class="icon solid fa-code"></i>
+									<h3>Tutor Number Optimization and Scheduling using ILP</h3>
+									<p>A brief description of what the project does or solves.</p>
+									<a href="https://github.com/soniaagst/ilp-tutor-number-optimization-and-scheduling" target="_blank" class="button small">View on GitHub</a>
+
+								<!-- Project 2 -->
+									<i class="icon solid fa-code"></i>
+									<h3>Vigenere Cipher: Encryption and Cryptanalysis</h3>
+									<p>A brief description of what the project does or solves.</p>
+									<a href="https://github.com/soniaagst/vigenere-cipher-encryption-and-cryptanalysis" target="_blank" class="button small">View on GitHub</a>
+
+								<!-- Project 3 -->
+									<i class="icon solid fa-code"></i>
+									<h3>Optimization: Unconstrained Nonlinear Programming</h3>
+									<p>A brief description of what the project does or solves.</p>
+									<a href="https://github.com/soniaagst/unconstrained-nonlinear-programming" target="_blank" class="button small">View on GitHub</a>
+
+								<!-- Project 4 -->
+									<i class="icon solid fa-code"></i>
+									<h3>Coding Theory: Syndrome Decoding</h3>
+									<p>A brief description of what the project does or solves.</p>
+									<a href="https://github.com/soniaagst/coding-theory" target="_blank" class="button small">View on GitHub</a>
+
+								<!-- Project 5 -->
+									<i class="icon solid fa-code"></i>
+									<h3>Coding Theory: Nonlinear Codes</h3>
+									<p>A brief description of what the project does or solves.</p>
+									<a href="https://github.com/soniaagst/coding-theory" target="_blank" class="button small">View on GitHub</a>
+
 								<p>By the way, check out my <a href="#gallery">awesome artwork</a>.</p>
 							</article>
 
@@ -109,11 +122,11 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/soniaagst/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									<li><a href="mailto:agst.sonia@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
-									<li><a href="https://www.instagram.com/sonia_agst/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://github.com/soniaagst" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://wa.me/6283845285336/" class="icon brands whatsapp"><span class="label">WhatsApp</span></a></li>
+									<li><a href="https://www.linkedin.com/in/soniaagst/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									<li><a href="mailto:agst.sonia@gmail.com" target="_blank" class="icon fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://www.instagram.com/sonia_agst/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/soniaagst" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://wa.me/6283845285336/" class="icon brands fa-whatsapp"><span target="_blank" class="label">WhatsApp</span></a></li>
 								</ul>
 							</article>
 
@@ -175,7 +188,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
+										<li><a href="#" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
